--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.5'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+
 
 }
