--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     testCompile 'junit:junit:4.12'
 }
